--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {},
   "devDependencies": {
     "nodeunit": "^0.9.1",
+    "typescript": "^4.1.3",
     "wav-decoder": "^1.1.0",
     "wav-encoder": "^1.1.0"
   }
