--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@types/node": "^14.14.24",
     "nodeunit": "^0.9.1",
     "typescript": "^4.1.3",
     "wav-decoder": "^1.1.0",
