--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "nodeunit": "^0.9.1",
     "typescript": "^4.1.3",
     "wav-decoder": "^1.1.0",
-    "wav-encoder": "^1.1.0"
+    "wav-encoder": "1.1.0"
   }
 }
