--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "High performance WAV file decoder and encoder",
   "main": "./index.js",
   "scripts": {
-    "test": "nodeunit ./tests/test.js"
+    "test": "tsc & nodeunit ./tests/test.js"
   },
   "repository": {
     "type": "git",
